--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,10 @@
         {
             "name": "Daniel S. Deboer",
             "email": "daniel.s.deboer@gmail.com"
+        },
+        {
+            "name": "Colby Garland",
+            "email": "colbygarland@gmail.com"
         }
     ],
     "autoload": {
