--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "coduo/php-to-string": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "7.0",
+        "phpunit/phpunit": "~9.0",
         "dbt/phpunit-runner": "^0.1.2"
     },
     "authors": [
