--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,14 @@
     "type": "library",
     "license": "MIT",
     "require": {
-        "php": ">=7.4",
-        "laravel/framework": "^6.2",
+        "php": ">=7.1.0",
+        "laravel/framework": "^6.0",
         "thibaud-dauce/mattermost-php": "^1.2",
         "monolog/monolog": "^1.23",
         "coduo/php-to-string": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~9.0",
+        "phpunit/phpunit": "7.0",
         "dbt/phpunit-runner": "^0.1.2"
     },
     "authors": [
