--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "require": {
         "php": ">=7.1.0",
-        "laravel/framework": "^6.0",
+        "laravel/framework": "^6.0|^7.0",
         "thibaud-dauce/mattermost-php": "^1.2",
         "monolog/monolog": "^1.23",
         "coduo/php-to-string": "^2.0"
